--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -7,6 +7,11 @@ broadcast-worlds: ['*']
 broadcast-zombie-villager-deaths: true
 # villagerannouncer.receive-broadcasts
 players-require-premissions: false
+# if DiscordSRV is installed then send any messages to the main text channel
+discordsrv-send-message-to-main-channel: true
+# this is only applicable if you have world filtering
+# or are using player permisisons
+log-messages-to-console: true
 
 messages:
   # all four of these settings will populate the %villager% variable:
@@ -37,4 +42,4 @@ messages:
 # %villager-experience%
 # %villager-type%
 
-file-version: 1
+file-version: 2
