--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -30,8 +30,8 @@ messages:
   location: '&r( &6XYZ: %x% %y% %z%, &r&ein &r&a%world-name%&r)'
   villager-message-with-profession: '&eA %villager% has died! Profession: %villager-profession%, level: %villager-level% %location%'
   villager-message: '&eA %villager% has died! %location%'
-  villager-infection-with-profession: '&eA %villager% has been infected! Profession: %villager-profession%, level: %villager-level% %location%'
-  villager-infection: '&eA %villager% has been infected! %location%'
+  villager-infection-with-profession: '&eA %villager% has been infected by %entity%! Profession: %villager-profession%, level: %villager-level% %location%'
+  villager-infection: '&eA %villager% has been infected by %entity%! %location%'
   death-by-entity: '&eA %villager% was killed by %entity% %location%'
   death-by-misc: '&eA %villager% died by %death-cause% %location%'
 
@@ -48,4 +48,4 @@ messages:
 # %villager-experience%
 # %villager-type%
 
-file-version: 3
+file-version: 4
