--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -19,6 +19,8 @@ discordsrv-send-message-to-main-channel: true
 # or are using player permisisons
 log-messages-to-console: true
 
+# messages are formatted with MiniMessage
+# for information go to https://docs.advntr.dev/minimessage/format.html
 messages:
   # all four of these settings will populate the %villager% variable:
   villager: 'villager'
@@ -27,13 +29,16 @@ messages:
   baby-zombie-villager: 'baby zombie villager'
 
   # populates %location% variable:
-  location: '&r( &6XYZ: %x% %y% %z%, &r&ein &r&a%world-name%&r)'
-  villager-message-with-profession: '&eA %villager% has died! Profession: %villager-profession%, level: %villager-level% %location%'
-  villager-message: '&eA %villager% has died! %location%'
-  villager-infection-with-profession: '&eA %villager% has been infected by %entity%! Profession: %villager-profession%, level: %villager-level% %location%'
-  villager-infection: '&eA %villager% has been infected by %entity%! %location%'
-  death-by-entity: '&eA %villager% was killed by %entity% %location%'
-  death-by-misc: '&eA %villager% died by %death-cause% %location%'
+  location: '<reset>( <color:gold>XYZ: %x% %y% %z%, <color:yellow>in <color:green>%world-name%</color>)'
+  # if you want a clickable link with a URL, use the example below:
+  #location: '<reset><click:OPEN_URL:http://mymapsite.com/world=%world-name%;%x%,%y%,%z%>( <color:gold>XYZ: %x% %y% %z%, <color:yellow>in <color:green>%world-name%</color>)</click>'
+
+  villager-message-with-profession: '<color:yellow>A %villager% has died! Profession: %villager-profession%, level: %villager-level% %location%'
+  villager-message: '<color:yellow>A %villager% has died! %location%'
+  villager-infection-with-profession: '<color:yellow>A %villager% has been infected by %entity%! Profession: %villager-profession%, level: %villager-level% %location%'
+  villager-infection: '<color:yellow>A %villager% has been infected by %entity%! %location%'
+  death-by-entity: '<color:yellow>A %villager% was killed by %entity% %location%'
+  death-by-misc: '<color:yellow>A %villager% died by %death-cause% %location%'
 
 # Available variables:
 # %villager%
@@ -48,4 +53,4 @@ messages:
 # %villager-experience%
 # %villager-type%
 
-file-version: 4
+file-version: 5
