--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.stumper66</groupId>
     <artifactId>VillagerAnnouncer</artifactId>
-    <version>1.6.1</version>
+    <version>1.7.0</version>
     <packaging>jar</packaging>
 
     <name>VillagerAnnouncer</name>
@@ -102,6 +102,10 @@
         <repository>
             <id>kyori</id>
             <url>https://mvnrepository.com/artifact/net.kyori/adventure-text-minimessage</url>
+        </repository>
+        <repository>
+            <id>EssentialsX</id>
+            <url>https://repo.essentialsx.net/releases/</url>
         </repository>
     </repositories>
 
